# Omega-AI-Platform

./: .gitignore  LICENSE  README.md  build.bat  build.sh  clean.bat  package-lock.json  package.json
apps/desktop/content-studio/generation_models/: README.md  pyproject.toml  qwen_tts_gui.py  run_qwen_tts_gui.bat
apps/desktop/content-studio/generation_models/localgen/: __init__.py  adapters.py  attention_backend.py  cuda_sanity.py  downloads.py  engines.py  gpu_runtime.py  hf_auth.py  hf_urls.py  installed_models.py  media_accel_probe.py  paths.py  registry.py  torch_device.py  tts_registry.py
apps/engine/: CMakeLists.txt  README.md
apps/engine/include/omega/engine/: command.hpp  dispatcher.hpp  engine.hpp  event_bus.hpp  infer_server_backend.hpp  inference_service.hpp  inference_worker.hpp  json_protocol.hpp  json_safe.hpp  media_service.hpp  model_registry.hpp  plugin_interface.hpp  speculative_config.hpp  win_shared_dll_paths.hpp
apps/engine/native/: .gitignore  CMakeLists.txt  README.md
apps/engine/native/cmake/: embed_c_string.py
apps/engine/native/include/: omega_infer.h
apps/engine/native/patches/: llama_model_migrate.cpp  llama_model_migrate.h
apps/engine/native/src/: omega_infer.cpp  omega_infer_chat.cpp  omega_infer_internal.h  omega_infer_vision.cpp
apps/engine/src/: dispatcher.cpp  engine.cpp  event_bus.cpp  infer_server_backend.cpp  inference_service.cpp  inference_worker.cpp  json_protocol.cpp  main.cpp  media_service.cpp  model_registry.cpp  speculative_config.cpp  win_shared_dll_paths.cpp
apps/engine/src/runtime/: dispatch_metrics.cpp  thread_pool.cpp
apps/runtime/: CMakeLists.txt
apps/runtime/include/omega/runtime/: config_store.hpp  cron_scheduler.hpp  debug_log.hpp  engine_client.hpp  event_bus.hpp  http_server.hpp  json_safe.hpp  native_routes.hpp  paths.hpp  process_util.hpp  profile_context.hpp  route_catalog.hpp  runtime_context.hpp  server_options.hpp  session_cleanup.hpp  shell_bridge.hpp
apps/runtime/resources/: route-catalog.json  tool-catalog.json
apps/runtime/resources/python-runtime/: plugin_invoke.py  stealth_fetch.py
apps/runtime/src/: config_store.cpp  cron_scheduler.cpp  engine_client.cpp  event_bus.cpp  http_server.cpp  main.cpp  native_routes.cpp  paths.cpp  process_util.cpp  profile_context.cpp  route_catalog.cpp  runtime_context.cpp  session_cleanup.cpp  shell_bridge.cpp
apps/runtime/src/agent/: parse_tool_calls.cpp
apps/runtime/src/chat/: agent_service.cpp  assistant_message_merge.cpp  attachment_extract.cpp  chat_sanitize.cpp  chat_service.cpp  media_encode.cpp  message_media.cpp  model_gate.cpp  stream_hub.cpp
apps/runtime/src/finetune/: finetune_capabilities.cpp  finetune_dataset_service.cpp  finetune_runner.cpp
apps/runtime/src/inference/: chat_usage.cpp  inference_router.cpp  media_engine_router.cpp  media_executor.cpp  model_load_payload.cpp  ollama_supervisor.cpp  remote_chat.cpp  sidecar_model_inventory.cpp  sidecar_supervisor.cpp  sse_stream.cpp
apps/runtime/src/media/: content_studio_native_media.cpp  ffmpeg_compose.cpp  ffmpeg_text_overlay.cpp  studio_media_runner.cpp
apps/runtime/src/models/: gguf_metadata.cpp  gpu_probe.cpp  hf_client.cpp  model_download_service.cpp  model_load_progress.cpp  model_meta_service.cpp  model_presets.cpp  model_quantize_service.cpp
apps/runtime/src/net/: https_client_httplib.cpp  https_client_win.cpp
apps/runtime/src/orchestrator/: parser.cpp  prompts.cpp  tool_catalog.cpp
apps/runtime/src/python/: python_supervisor.cpp  setup_progress.cpp  venv_setup.cpp
apps/runtime/src/services/: assistant_prompt.cpp  chat_attachment_service.cpp  chat_tts_orchestrator.cpp  content_job_delivery_service.cpp  content_studio_native_status.cpp  content_studio_orchestrator.cpp  content_studio_supervisor.cpp  debug_store.cpp  desktop_aux_service.cpp  editor_service.cpp  gateway_manager.cpp  integrations_api.cpp  mcp_client_manager.cpp  mcp_omega_handler.cpp  media_player_service.cpp  office_visualization_service.cpp  pipeline_activity.cpp  router_models_service.cpp  self_improve_service.cpp  sidecar_service.cpp  system_info_service.cpp  terminal_store.cpp  updater_service.cpp  workforce_orchestrator.cpp  workforce_store.cpp
apps/runtime/src/storage/: content_studio_settings.cpp  cron_store.cpp  database.cpp  finetune_store.cpp  gateway_store.cpp  input_pipeline_store.cpp  integrations_store.cpp  kanban_store.cpp  mcp_store.cpp  memory_store.cpp  model_config_store.cpp  plugin_store.cpp  profile_store.cpp  project_store.cpp  provider_store.cpp  rag_store.cpp  session_store.cpp  skills_store.cpp  soul_store.cpp  usage_store.cpp  workflow_store.cpp
apps/runtime/src/tools/: agent_desktop_tools.cpp  agent_platform_tools.cpp  plugin_runner.cpp  sandbox.cpp  tool_approval.cpp  tool_registry.cpp
apps/runtime/src/util/: context_trim.cpp
apps/runtime/src/workflows/: workflow_runner.cpp
apps/shell/: CMakeLists.txt
apps/shell/include/omega/shell/: app_paths.hpp  embedded_browser.hpp  overlay_window.hpp  platform_window.hpp  runtime_supervisor.hpp  screen_snip_service.hpp  shell_context.hpp  shell_http_server.hpp  shell_menu.hpp  shell_menu_win.hpp  shell_tray_win.hpp  shell_ui_dispatch.hpp  static_server.hpp  webview_env.hpp  webview_host.hpp
apps/shell/resources/: omega_desktop.rc
apps/shell/src/: app_paths.cpp  app_paths_unix.cpp  embedded_browser.cpp  embedded_browser_linux.cpp  embedded_browser_mac.mm  main.cpp  main_linux.cpp  main_mac.mm  overlay_window.cpp  overlay_window_linux.cpp  overlay_window_mac.mm  platform_window_mac.mm  platform_window_unix.cpp  platform_window_win.cpp  runtime_supervisor.cpp  runtime_supervisor_posix.cpp  screen_snip_linux.cpp  screen_snip_mac.mm  screen_snip_service.cpp  screen_snip_stub.cpp  shell_context.cpp  shell_http_server.cpp  shell_menu_linux.cpp  shell_menu_mac.mm  shell_menu_win.cpp  shell_tray_linux.cpp  shell_tray_mac.mm  shell_tray_stub.cpp  shell_tray_win.cpp  shell_ui_dispatch_win.cpp  static_server.cpp  webview_env_win.cpp  webview_host_linux.cpp  webview_host_mac.mm  webview_host_win.cpp
docs/: ARCHITECTURE.md  (+14 more)
(+659 files in other folders)
